--- a/templates/bbs/index.html
+++ b/templates/bbs/index.html
@@ -1,7 +1,10 @@
 {% load static %}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'bbs/css/style.css' %}">
     <script src="{% static 'bbs/js/script.js' %}"></script>
 
@@ -30,7 +33,7 @@
     <input type="text" name="title">
     <input type="text" name="comment">
     <input type="number" name="price">
-    <input type="submit" value="投稿">
+    <input class="btn btn-success" type="submit" value="投稿">
 </form>
 
 {% if topics %}
@@ -44,7 +47,7 @@
         <td>
            <form action="{% url 'bbs:delete' topic.id %}" method="POST">
                {% csrf_token %}
-               <input type="submit" value="削除">
+               <input class="btn btn-outline-dark" type="submit" value="削除">
            </form>
         </td>
     </tr>
@@ -61,7 +64,7 @@
 <form action="" method="GET">
     <input type="text" name="search" placeholder="キーワードを入力してください">
     <input type="text" name="category" placeholder="カテゴリを入力してください">
-    <input type="submit" value="送信">
+    <input class="btn btn-success" type="submit" value="送信">
 </form>
 
 <form action="" method="POST">
